[package]
name = "wow-raid-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dioxus = "0.4.0"
dioxus-desktop = { version = "0.4.0", features = ["tray"] }
dioxus-router = "0.4.1"
nom = "7.1.3"
thiserror = "1.0.48"

[profile.release]
debug = 1
